--- a/PixelStudio/Web.config
+++ b/PixelStudio/Web.config
@@ -18,7 +18,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
-    <customErrors mode="On" defaultRedirect="/Home/Error.cshtml"></customErrors>
+    <customErrors mode="On" defaultRedirect="~/Error/Error">
+      <error statusCode="404" redirect="~/Error/PageNotFound"/>
+    </customErrors>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
