--- a/PixelStudio/Web.config
+++ b/PixelStudio/Web.config
@@ -20,6 +20,7 @@
     <httpRuntime targetFramework="4.5.2"/>
     <customErrors mode="On" defaultRedirect="~/Error/Error">
       <error statusCode="404" redirect="~/Error/PageNotFound"/>
+      <error statusCode="404" redirect="~/Error/Error"/>
     </customErrors>
   </system.web>
   <runtime>
