--- a/PixelStudio/PixelStudio.csproj
+++ b/PixelStudio/PixelStudio.csproj
@@ -145,15 +145,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="image\Site.ico" />
-    <Content Include="image\инстабук.jpg" />
-    <Content Include="image\Календарь.jpg" />
-    <Content Include="image\рамка.jpg" />
+    <Content Include="Site-Images\Site.ico" />
+    <Content Include="Site-Images\инстабук.jpg" />
+    <Content Include="Site-Images\Календарь.jpg" />
+    <Content Include="Site-Images\рамка.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="image\печать 2.webp" />
-    <Content Include="image\печать.webp" />
-    <Content Include="image\черно белая.webp" />
+    <Content Include="Site-Images\печать 2.webp" />
+    <Content Include="Site-Images\печать.webp" />
+    <Content Include="Site-Images\черно белая.webp" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
