--- a/PixelStudio/Web.config
+++ b/PixelStudio/Web.config
@@ -16,6 +16,8 @@
   </connectionStrings>
   
   <system.web>
+    <!--<sessionState mode="InProc" timeout="1"></sessionState>-->
+    
     <compilation debug="true" targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <customErrors mode="On" defaultRedirect="~/Error/Error">
@@ -23,6 +25,7 @@
       <error statusCode="404" redirect="~/Error/Error"/>
     </customErrors>
   </system.web>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
