Set routing for usual and registered users

--- a/PixelStudio/PixelStudio.csproj
+++ b/PixelStudio/PixelStudio.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Home\MakeOrder.cshtml" />
     <Content Include="Views\Administration\All_Orders.cshtml" />
     <Content Include="Views\UserLogin\SignOut.cshtml" />
+    <Content Include="Views\Home\MakeOrderForEnteredUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
