--- a/PixelStudio/Web.config
+++ b/PixelStudio/Web.config
@@ -16,6 +16,7 @@
   </connectionStrings>
   
   <system.web>
+    <!--выход если бездействие 1 мин-->
     <!--<sessionState mode="InProc" timeout="1"></sessionState>-->
     
     <compilation debug="true" targetFramework="4.5.2"/>
