Adding shop card

--- a/PixelStudio/PixelStudio.csproj
+++ b/PixelStudio/PixelStudio.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Administration\All_Orders.cshtml" />
     <Content Include="Views\UserLogin\SignOut.cshtml" />
     <Content Include="Views\Home\MakeOrderForEnteredUser.cshtml" />
+    <Content Include="Views\Home\GetAllOrders.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
