--- a/PixelStudio/PixelStudio.csproj
+++ b/PixelStudio/PixelStudio.csproj
@@ -202,6 +202,7 @@
     <Content Include="Views\Administration\All_Users.cshtml" />
     <Content Include="Views\Home\DeleteOrder.cshtml" />
     <Content Include="Views\Administration\Edit_Order.cshtml" />
+    <Content Include="Views\Administration\All_UnpopularServeces.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
